filter empty roles